--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://asish-tammana.github.io/2wJRC9E4ktGUSKJ6/",
+  "homepage": "https://akhilendar.github.io/asish-code/",
   "devDependencies": {
     "gh-pages": "^6.1.0"
   }
